--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </ul>
     
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam eum dolorum, </p>
+                <p>Have sufficient knowledge in web development and software engineering </p>
                 <div class="progress-skils">
                     <div class="progress-item">
                         <div class="progress-header">
