add href to social media links

--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
                 <a class="#"><i class="ri-stackshare-fill"></i>contact </a>
                 <p>You can find us on social media</p>
                 <div class="social-links">
-                    <a href="#" class="ri-facebook-circle-fill"></a>
-                    <a href="#" class="ri-twitter-fill"></a>
-                    <a href="#" class="ri-github-fill"></a>
-                    <a href="#" class="ri-linkedin-fill"></a>
+                    <a href="www.facebook.com" class="ri-facebook-circle-fill"></a>
+                    <a href="https://twitter.com/HadiAhmed32965469?t=IDVWQBOb0GHmhwWUnuHA9w&s=09" class="ri-twitter-fill"></a>
+                    <a href="https://github.com/sofantech" class="ri-github-fill"></a>
+                    <a href="https://LinkedIn.com/hadi Ahmed" class="ri-linkedin-fill"></a>
                 </div>
             </div>
             <div class="form-box">
