add my cv to download and editing image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <P>Full Stack Web Developer</P>
             <div class="button">
                 <button class="btn">Hire Me</button>
-                <button class="btn">Download Cv <i class="ri-download-2-fill"></i></button>
+                <a href="pdf/CV_HADIsofan.pdf" download class="btn">Download Cv <i class="ri-download-2-fill"></i></a>
             </div>
         </div>
         <div class="image">
