activate click on ourwork section

--- a/index.html
+++ b/index.html
@@ -219,17 +219,17 @@
         <div class="work-container">
             <div class="box">
                 <div class="image">
-                    <img src="images/our work/our work three.png">
+                    <a href="https://sofantech.github.io/yemeni-house/"><img src="images/our work/our work three.png"></a>
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="images/our work/our work four.png">
+                    <a href="https://sofantech.github.io/html-css-template-on/"><img src="images/our work/our work four.png"></a>
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="images/our work/our-work-two.png">
+                    <a href="https://sofantech.github.io/Rowad-challenge/"><img src="images/our work/our-work-two.png"></a>
                 </div>
             </div>
             <div class="box">
@@ -239,7 +239,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="images/our work/portfolio-2.jpg">
+                    <a href="https://sofantech.github.io/SofanTec_Company/"><img src="images/our work/sofantec.png"></a>
                 </div>
             </div>
         </div>
