dark mode and validation

--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
             <i class="ri-phone-fill"></i>
             <a class="">+967 777 607 485</a>
         </div>
+        
     </header>
     <!-- ###### start home section ##########-->
     <section class="home" id="home">
+        <div class="dark-sun-mode">
+            <i id="dark-mode" class="ri-contrast-2-fill"></i>
+        </div>
         <div class="txt-content">
             <div class="hello">
                 <span class="separate"></span>
@@ -261,11 +265,11 @@
                 </div>
             </div>
             <div class="form-box">
-                <form>
-                    <input type="text" placeholder="Your Name">
-                    <input type="email" placeholder="Email Address">
-                    <input type="text" placeholder="Subject">
-                    <textarea placeholder="Message"></textarea>
+                <form id="form">
+                    <input class="" id="userName" type="text" placeholder="Your Name">
+                    <input id="email" type="email" placeholder="Email Address">
+                    <input id="subject" type="text" placeholder="Subject">
+                    <textarea id="message" placeholder="Message"></textarea>
                     <input type="submit" class="btn send" value="send"></button>
                 </form>
             </div>
@@ -273,7 +277,7 @@
     </section>
      <!-- ###### end contact section ##########-->
      <!-- ###### start footer ##########-->
-     <footer class="footer">
+     <footer class="footer" id="footer">
          <p>All Right Recerved 2022 &copy;</p>
      </footer>
      <!-- ###### end footer##########-->
